# model

./: .gitignore  README.aux  README.md  README.out  README.tex  main.py  matrix.py  node.py  pyproject.toml  test_propagate.py  test_train.py
source/: README.aux  README.tex
source/_minted/: 368B470ED6247B804B86D3EC38090C87.highlight.minted  _C47C7C7383225AB55FF591CB59C41E6B.index.minted  fruity.style.minted
source/src/: main.py  test.py
source/src/dicts/: hashing.py  signs.py
source/src/input/: block.md
source/src/memory/: __init__.py  memory.py
source/src/neuron/: neuron.py
source/src/other/: like.py  not_.py  semantic.py
source/src/semantic/: concept.py  test_semantic.py
src/: concept.py  lstm.py  main.py  matrix.py  memory.py  node.py  test.py
src/chart/: 3d.py
src/concepts/: semantic.md
src/dicts/: signs.py
src/dicts/codec/: __init__.py  test_codec.py
src/dicts/english/: words.py
src/input/: block.md
src/memory/: memory.py  memory_report.py
src/neuron/: autocrop.html  autocrop.md  bridge.md  grafico.md  memory.py  memory_.py
src/other/: concept.py  do.py  fall.py  rain.py  you.py
src/semantic/: system.py
src/sign/: codec.py  test_codec.py
src/symbol/: codec.py  test_codec.py
src/utils/: __init__.py  image_to_svg.py  word_to_image.py
tests/: test_node.py  test_prompt.py
train-desktop/: nuxt.config.ts  package-lock.json  package.json
train-desktop/app/components/: Block.vue  ChartMatrix3d.vue  Console.vue  Header.vue  TabSemantic.vue  (+6 more)
train-desktop/electron/: main.js  package-lock.json  package.json
utils/: hashing.py
(+7 files in other folders)
