[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model"
version = "0.1.0"
description = "Descripción breve de mi nodo de software"
dependencies = [
    # "requests>=2.28.0",  # Añade aquí tus dependencias si las tienes
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]